# secure-messenger

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  static.yml  test.yml
certs/: README.md  gen_certs.sh
docs/: ARCHITECTURE.md  DOCUMENTATION.md  index.html
messenger/: __init__.py
messenger/chat/: cli.py  session.py
messenger/common/: constants.py  exceptions.py  serializer.py
messenger/crypto/: e2e.py
messenger/receiver/: cli.py  server.py  tls_server.py
messenger/sender/: cli.py  connection.py  tls_client.py
messenger/shortcuts/: rcv.py  snd.py
scripts/: build_deb.sh  postinstall.sh
systemd/: messenger-receive.service
tests/certs/: .gitignore  gen_test_certs.sh
tests/integration/: test_end_to_end.py
tests/unit/: test_e2e_crypto.py  test_serializer.py
